# GreyVctr-ai-threat-intel

./: README.md
deliverables/: ai-shield-intelligence-overview-slides.md  ai-shield-intelligence-overview.pptx
src/minimal-local/: ANALYTICS.md  README.md  pyproject.toml
src/minimal-local/backend/: config.py  main.py  tasks.py
src/minimal-local/backend/api/: analytics.py  analytics_schemas.py  search.py  system.py
src/minimal-local/backend/services/: analytics.py  processing_state.py  search.py
src/minimal-local/backend/tests/: test_analytics_distributions_unit.py  test_analytics_mitre_heatmap_unit.py  test_analytics_severity_matrix_unit.py  test_analytics_timeout.py  test_analytics_trends_unit.py  test_analytics_unit.py  test_build_graph_data_property.py  test_entity_graph_endpoint.py  test_node_size_bounds_property.py  test_pause_endpoint.py  test_pause_resume_tasks.py  test_processing_state.py
src/minimal-local/frontend/: package-lock.json  package.json  vite.config.ts
src/minimal-local/frontend/src/: App.tsx
src/minimal-local/frontend/src/components/: AnalyticsPage.tsx  Dashboard.tsx  Layout.tsx  SearchPage.tsx  Settings.tsx
src/minimal-local/frontend/src/components/analytics/: DistributionChart.tsx  EntityClusterView.tsx  EntityRelationshipGraph.tsx  FilterPanel.tsx  MitreHeatmap.tsx  SeverityMatrix.tsx  TrendChart.tsx
src/minimal-local/frontend/src/services/: api.ts
